# sponsor-scraper

./: prompt.txt  pyproject.toml  sponsors.csv
scrape/: main.py
